<resources>
    <string name="app_name">My_Salon</string>
    <string name="launch_theme">Студия \nПавла Ярошенко</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home"><b>Домой</b></string>
    <string name="my_orders"><b>Мои записи</b></string>
    <string name="share">Поделиться приложением</string>
    <string name="message"><b>Сообщения</b></string>
    <string name="log_in"><b>Войти</b></string>
    <string name="version">Версия приложения: %1$s</string>
    <string name="settings"><b>Настройки</b></string>
    <string name="menu">Главная</string>
    <string name="description">Описание парикмахерской</string>
    <string name="address">ул.Бобруйская 19 \n(вход с торца здания)</string>
    <string name="call">Позвонить</string>
    <string name="chat">Написать</string>
    <string name="description_header">Описание</string>
    <string name="feedback">Отзывы</string>
    <string name="add_feedback">Добавить отзыв</string>
    <string name="order">Записаться</string>

    <!--string for login button-->
    <string name="login">Вход в аккаунт</string>
    <!--string for edittext hint in email-->
    <string name="enter_your_email">Введите ваш Email</string>
    <!--string for logout button-->
    <string name="logout">Logout</string>
    <string name="register">Регистрация</string>
    <string name="to_register"><u>Регистрация</u></string>
    <string name="registration">Зарегистрироваться</string>
    <string name="enter_your_name">Имя</string>
    <string name="enter_phone">Номер телефона</string>
    <string name="getSms">Получить SMS с кодом</string>
    <string name="introduce_yourself">Представьтесь, пожалуйста</string>
    <string name="enter_phone_number">Введите номер телефона, указанного при регистрации</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="Redirect_to_registr">Ещё не зарегистрированы?</string>
    <string name="toLogin">Войти</string>
    <string name="account">Аккаунт</string>
    <string name="other">Впечатления о приложении</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Redirect_to_login">Уже зарегестрированы?</string>
    <string name="to_login"><u>Войти</u></string>
    <string name="design">Интерьер</string>
    <string name="service">Услуги</string>
    <string name="service_1">Стрижка мужская</string>
    <string name="service1">30 BYN 45 минут</string>
    <string name="service_2">Стрижка женская</string>
    <string name="service2">"50 BYN 60 минут "</string>
    <string name="Stuff">Сотрудники</string>
    <string name="stuff_name">Павел</string>
    <string name="stuff_profession">Парикмахер</string>
    <string name="count_services">Услуг: 20</string>
    <string name="stuff_count">1</string>
    <string name="example_header">Примеры работ</string>
    <string name="links">Ссылки</string>
    <string name="more_feedbacks">ЕЩЕ</string>
    <string name="make_order">Записаться</string>
    <string name="no_orders">У Вас нет записей</string>
    <string name="redirect_to_home_page">ПЕРЕЙТИ НА ГЛАВНУЮ</string>
    <string name="my_orders_toolbar">МОИ ЗАПИСИ</string>
    <string name="archive">АРХИВ</string>
    <string name="order_number"><u>Заявка</u> №:</string>
    <string name="first_name">Имя</string>
    <string name="last_name">"Фамилия: "</string>
    <string name="phone">Тел.:</string>
    <string name="service_type">Услуга:</string>
    <string name="service_example1">Стрижка мужская</string>
    <string name="service_example2">Покраска</string>
    <string name="service_example3">Причёска</string>
    <string name="date">Дата:</string>
    <string name="time">Время:</string>

</resources>