<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/ic_my_orders"
            android:title="@string/my_orders" />

        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_message"
            android:title="@string/message" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_login"
                android:title="@string/log_in" />

            <item
                android:id="@+id/nav_registration"
                android:icon="@drawable/ic_registration"
                android:title="@string/registration" />
        </menu>

    </item>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />

            <item
                android:id="@+id/nav_version"
                android:title="@string/version" />
        </menu>
    </item>
</menu>